[package]
name = "pagenine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "3.2.17", features = ["derive"] }
log = "0.4"
notify-rust = "4.5.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "4.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
